--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "komorebi"
-version = "0.1.0"
+version = "0.2.0"
 description = "Cognitive infrastructure for capture, compaction, and context management"
 requires-python = ">=3.11"
 dependencies = [
@@ -14,6 +14,7 @@ dependencies = [
     "httpx>=0.26.0",
     "sse-starlette>=1.8.0",
     "rich>=13.7.0",
+    "ollama>=0.1.0",
 ]
 
 [project.optional-dependencies]
