--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "komorebi-dashboard",
-  "version": "0.2.0",
+  "version": "0.2.1+build1",
   "private": true,
   "type": "module",
   "scripts": {
