--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "komorebi"
-version = "0.2.0"
+version = "0.2.1+build1"
 description = "Cognitive infrastructure for capture, compaction, and context management"
 requires-python = ">=3.11"
 dependencies = [
