--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "komorebi"
-version = "0.3.0"
+version = "0.3.1"
 description = "Cognitive infrastructure for capture, compaction, and context management"
 requires-python = ">=3.11"
 dependencies = [
@@ -22,6 +22,7 @@ dev = [
     "pytest>=7.4.0",
     "pytest-asyncio>=0.23.0",
     "pytest-httpx>=0.28.0",
+    "ruff>=0.1.0",
 ]
 
 [project.scripts]
