--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "sse-starlette>=1.8.0",
     "rich>=13.7.0",
     "ollama>=0.1.0",
+    "pyyaml>=6.0",
+    "watchdog>=4.0.0",
 ]
 
 [project.optional-dependencies]
